fix portfolio card alignment

--- a/portfolio/src/components/portfolioCard/PortfolioCard.css
+++ b/portfolio/src/components/portfolioCard/PortfolioCard.css
@@ -28,11 +28,10 @@
 }
 .card-image {
     margin: 1rem;
-    align-self: flex-end;
-    display: flex;
-    justify-content: center;
+    height: 100%;
 }
 .card-image img{
-    width: 200px;
-    height: 200px;
+    width: 100%;
+    max-width: 500px;
+    height: 100%;
 }
